--- a/src/SwashbucklerDiary.Rcl/Pages/IndexPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/IndexPage.razor
@@ -21,7 +21,7 @@
                 @if (showDate)
                 {
                     <div class="text--secondary mb-2">
-                        @(DateTime.Now.ToString("yyyy/MM/dd") + " " + I18n.ToWeek())
+                        @(DateTime.Now.ToString("d") + " " + I18n.ToWeek())
                     </div>
                 }
 
