--- a/src/SwashbucklerDiary.Rcl/Pages/ReadPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/ReadPage.razor
@@ -49,69 +49,69 @@
 
 <ScrollContainer>
     <div id="screenshot" class="primary-background">
-        <div class="px-3 d-flex align-end">
-            <span class="text-h6 font-weight-bold">
-                @(diary.CreateTime.ToString("yyyy/MM/dd"))
-            </span>
-            <span class="pl-5 text-subtitle-1">
-                @(I18n.ToWeek(diary.CreateTime))
-            </span>
-            <MSpacer></MSpacer>
-            <span class="text-subtitle-1">
-                @(CounterValue())
-            </span>
-        </div>
-        <div class="px-2">
-            @if (ShowWeather)
-            {
-                <MChip Class="my-2 mr-2"
-                       Outlined="true">
-                    <MIcon Left="true">
-                        @(GetWeatherIcon())
-                    </MIcon>
-                    @(I18n.T("Weather." + diary.Weather))
-                </MChip>
-            }
-
-            @if (ShowMood)
-            {
-                <MChip Class="my-2 mr-2"
-                       Outlined="true">
-                    <MIcon Left="true">
-                        @(GetMoodIcon())
-                    </MIcon>
-                    @(I18n.T("Mood." + diary.Mood))
-                </MChip>
-            }
-
-            @if (ShowLocation)
-            {
-                <MChip Class="my-2 mr-2"
-                       Outlined="true">
-                    <MIcon Left="true">
-                        mdi-map-marker-outline
-                    </MIcon>
-                    @(diary.Location)
-                </MChip>
-            }
-        </div>
-
-        @if (ShowTitle)
-        {
-            <MTextField Value="@(diary.Title)"
-                        Class="pb-0 my-sm-4 user-select font-weight-bold"
-                        Solo="true"
-                        Flat="true"
-                        TValue="string"
-                        HideDetails="@("auto")"
-                        Dense="true"
-                        Readonly="true"
-                        maxlength="20">
-            </MTextField>
-        }
-
         @if (afterRender)
         {
+            <div class="px-3 d-flex align-end">
+                <span class="text-h6 font-weight-bold">
+                    @(diary.CreateTime.ToString("d"))
+                </span>
+                <span class="pl-5 text-subtitle-1">
+                    @(I18n.ToWeek(diary.CreateTime))
+                </span>
+                <MSpacer></MSpacer>
+                <span class="text-subtitle-1">
+                    @(CounterValue())
+                </span>
+            </div>
+            <div class="px-2">
+                @if (ShowWeather)
+                {
+                    <MChip Class="my-2 mr-2"
+                           Outlined="true">
+                        <MIcon Left="true">
+                            @(GetWeatherIcon())
+                        </MIcon>
+                        @(I18n.T("Weather." + diary.Weather))
+                    </MChip>
+                }
+
+                @if (ShowMood)
+                {
+                    <MChip Class="my-2 mr-2"
+                           Outlined="true">
+                        <MIcon Left="true">
+                            @(GetMoodIcon())
+                        </MIcon>
+                        @(I18n.T("Mood." + diary.Mood))
+                    </MChip>
+                }
+
+                @if (ShowLocation)
+                {
+                    <MChip Class="my-2 mr-2"
+                           Outlined="true">
+                        <MIcon Left="true">
+                            mdi-map-marker-outline
+                        </MIcon>
+                        @(diary.Location)
+                    </MChip>
+                }
+            </div>
+
+            @if (ShowTitle)
+            {
+                <MTextField Value="@(diary.Title)"
+                            Class="pb-0 my-sm-4 user-select font-weight-bold"
+                            Solo="true"
+                            Flat="true"
+                            TValue="string"
+                            HideDetails="@("auto")"
+                            Dense="true"
+                            Readonly="true"
+                            maxlength="20">
+                </MTextField>
+            }
+
             @if (enableMarkdown)
             {
                 <MarkdownPreview Value="@(diary.Content)"
