💄 style: update a little style

--- a/src/SwashbucklerDiary.Rcl/wwwroot/css/app.css
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/css/app.css
@@ -447,6 +447,6 @@ a, .btn-link {
         margin-right: 12px;
     }
 
-.m-chip m-chip--outlined {
+.m-chip.m-chip--outlined {
     padding: 0 16px;
 }
