🐛 fix: Wrong path

--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiarySetting.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiarySetting.razor
@@ -61,7 +61,7 @@
            Elevation="0"
            Rounded="@("lg")">
         <MList>
-            <MListItem OnClick="@(()=>To("location"))">
+            <MListItem OnClick="@(()=>To("locationSetting"))">
                 <MListItemIcon>
                     <MIcon Class="list-item-icon">
                         mdi-map-marker-outline
