--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/MultiDisplay/MultiSearch.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/MultiDisplay/MultiSearch.razor
@@ -1,7 +1,7 @@
 ﻿@namespace SwashbucklerDiary.Rcl.Components
 @inherits ImportantComponentBase
 
-<MultiDisplay Tablet="true">
+<MultiDisplay MdAndUp="true">
     <MobileContent>
         <MButton Large="true"
                  Icon="true"
