--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/TagCard/TagCard.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/TagCard/TagCard.razor
@@ -1,43 +1,34 @@
 ﻿@namespace SwashbucklerDiary.Rcl.Components
-@inherits MyComponentBase
+@inherits CardComponentBase<TagModel>
 
-<MHover>
-    <MCard @attributes="context.Attrs"
-           @oncontextmenu="()=>ShowMenu=true"
-           Class="@($"mb-5 my-tag-card {(context.Hover?"elevation-sm-2":"")}")"
-           Elevation="0"
-           Ripple="false"
-           Rounded="@("lg")"
-           OnClick="ToTagPage">
-        <MListItem>
-            <MListItemIcon>
-                <MIcon>
-                    mdi-label-outline
-                </MIcon>
-            </MListItemIcon>
+<MCard Class="mb-5 my-tag-card elevation-sm-2--active"
+       Elevation="0"
+       Ripple="false"
+       Rounded="@("lg")"
+       OnClick="ToTagPage">
+    <MListItem>
+        <MListItemIcon>
+            <MIcon>
+                mdi-label-outline
+            </MIcon>
+        </MListItemIcon>
 
-            <MListItemContent>
-                @(Value.Name)
-            </MListItemContent>
+        <MListItemContent>
+            @(Value.Name)
+        </MListItemContent>
 
-            <MListItemContent Class="setting-state">
-                <MListItemSubtitle>
-                    @(DiaryCount)
-                </MListItemSubtitle>
-            </MListItemContent>
+        <MListItemContent Class="setting-state">
+            <MListItemSubtitle>
+                @(DiaryCount)
+            </MListItemSubtitle>
+        </MListItemContent>
 
-            <MListItemAction @onclick:stopPropagation="true">
-                <MultiMenu @bind-Visible="ShowMenu"
-                           DynamicListItems="MenuItems"
-                           Context="menuContext">
-                    <ActivatorContent>
-                        <MButton @attributes="@menuContext.Attrs"
-                                 Icon="true">
-                            <MIcon>mdi-pencil-outline</MIcon>
-                        </MButton>
-                    </ActivatorContent>
-                </MultiMenu>
-            </MListItemAction>
-        </MListItem>
-    </MCard>
-</MHover>
+        <MListItemAction @onclick:stopPropagation="true">
+            <MButton @attributes="@activatorAttributes"
+                     Icon="true"
+                     OnClick="OpenMenu">
+                <MIcon>mdi-pencil-outline</MIcon>
+            </MButton>
+        </MListItemAction>
+    </MListItem>
+</MCard>
