--- a/src/SwashbucklerDiary.Rcl/wwwroot/css/extend/masa-blazor-extend.css
+++ b/src/SwashbucklerDiary.Rcl/wwwroot/css/extend/masa-blazor-extend.css
@@ -180,7 +180,7 @@
 
 /*自适应海拔*/
 @media screen and (min-width:600px) {
-    .m-application .elevation-sm-2 {
+    .m-application .elevation-sm-2--active:hover {
         box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12) !important
     }
 }
