--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/MultiDisplay/MultiListDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/MultiDisplay/MultiListDialog.razor
@@ -9,7 +9,7 @@
                                Eager="true">
             <MCard Class="rounded-t-lg py-2">
                 <MList>
-                    <div @onclick="HandleOnCancel">
+                    <div @onclick="HandleOnCancel" class="dynamic-list-item-collection">
                         @foreach (var item in DynamicListItems)
                         {
                             @if (item.Show)
@@ -24,10 +24,8 @@
                                         @(I18n.T(item.Text))
                                     </MListItemContent>
                                 </MListItem>
-                                if (DynamicListItems.Last(it => it.Show) != item)
-                                {
-                                    <MDivider></MDivider>
-                                }
+
+                                <MDivider></MDivider>
                             }
                         }
                     </div>
