--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/About/AboutPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/About/AboutPage.razor
@@ -42,7 +42,7 @@
         <MCard Class="@($"{(viewLists.Last() != list?"mb-5":"")}")"
                Elevation="0"
                Rounded="@("lg")">
-            <MList>
+            <MList Class="dynamic-list-item-collection">
                 @foreach (var item in list)
                 {
                     <MListItem OnClick="item.OnClick">
@@ -59,10 +59,7 @@
                         </MListItemAction>
                     </MListItem>
 
-                    if (list.Last() != item)
-                    {
-                        <MDivider Class="mx-3"></MDivider>
-                    }
+                    <MDivider Class="mx-3"></MDivider>
                 }
 
             </MList>
