♻️ refactor(DiaryCard): Move Extract to Extension Method

--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/DiaryCard/DiaryCard.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/DiaryCard/DiaryCard.razor
@@ -20,7 +20,7 @@
             </div>
         </MListItemContent>
         <MListItemAction @onclick:stopPropagation="true">
-            @if (IsTop)
+            @if (Value.Top)
             {
                 <MIcon>
                     mdi-format-vertical-align-top
