♻️ refactor(MultiSearch): add handle enter key

--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/MultiDisplay/MultiSearch.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/MultiDisplay/MultiSearch.razor
@@ -19,7 +19,8 @@
                     Dense="true"
                     HideDetails="@("auto")"
                     AppendIcon="mdi-magnify"
-                    OnAppendClick="Search">
+                    OnAppendClick="Search"
+                    OnKeyDown="HandleOnEnter">
         </MTextField>
     </DesktopContent>
 </MultiDisplay>
